agregando vistas sedes

--- a/src/index.html
+++ b/src/index.html
@@ -50,7 +50,7 @@
         </div>
       </div>
       <div class="copyrights text-center">
-        <p><strong>Developed by Brenda Sánchez & Jaz </strong>
+        <p><strong>Developed by Brenda Sánchez & Jaz Reyes</strong>
         </p>
       </div>
     </div>
