--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="vendor/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="vendor/font-awesome/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/fontastic.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins:300,400,700">
+    <link href="https://fonts.googleapis.com/css?family=Bitter:400,700|Open+Sans:400,700" rel="stylesheet">
     <link rel="stylesheet" href="css/style.default.css" id="theme-stylesheet">
     <link rel="stylesheet" href="css/custom.css">
     <link rel="shortcut icon" href="img/logo.jpg">
